--- a/style.css
+++ b/style.css
@@ -13,6 +13,23 @@ body {
 
 .header {
   margin-bottom: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.logo {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+
+h1 {
+  font-family: "Coiny", cursive;
+  font-size: 42px;
+  line-height: 1;
+  margin-top: 8px;
+  text-transform: uppercase;
 }
 
 .fact-form {
@@ -20,12 +37,6 @@ body {
   margin-bottom: 40px;
   padding: 16px 40px;
   text-align: center;
-}
-
-h1 {
-  font-size: 42px;
-  text-transform: uppercase;
-  font-family: "Coiny", cursive;
 }
 
 .fact {
