--- a/style.css
+++ b/style.css
@@ -40,6 +40,12 @@ h1 {
   text-align: center;
 }
 
+.main {
+  display: grid;
+  grid-template-columns: 250px 1fr;
+  gap: 48px;
+}
+
 .fact {
   font-size: 20px;
   line-height: 1.4;
