--- a/style.css
+++ b/style.css
@@ -98,9 +98,7 @@ ul {
   text-transform: uppercase;
   font-size: 14px;
   font-family: "Coiny", cursive;
-  padding-top: 3px;
-  padding-left: 10px;
-  padding-right: 10px;
+  padding: 3px 10px 0;
 }
 
 .vote-buttons {
