--- a/style.css
+++ b/style.css
@@ -99,6 +99,7 @@ ul {
   font-size: 14px;
   font-family: "Coiny", cursive;
   padding: 3px 10px 0;
+  border-radius: 100px;
 }
 
 .vote-buttons {
@@ -114,6 +115,8 @@ ul {
   padding: 16px 0 13px;
   background-image: linear-gradient(135deg, #3b82f6, #ef4444, #16a34a, #eab308);
   color: inherit;
+  border-radius: 100px;
+  cursor: pointer;
   transition: 0.3s;
 }
 
