add fact form styling

--- a/style.css
+++ b/style.css
@@ -29,8 +29,12 @@ body {
 .fact-form {
   background-color: #44403c;
   margin-bottom: 40px;
-  padding: 16px 40px;
-  text-align: center;
+  padding: 16px 32px;
+  border-radius: 16px;
+
+  display: flex;
+  align-items: center;
+  gap: 16px;
 }
 
 .main {
@@ -75,6 +79,7 @@ ul {
   margin-bottom: 16px;
   padding: 16px 24px;
   letter-spacing: -1px;
+  border-radius: 16px;
 
   display: flex;
   align-items: center;
@@ -158,4 +163,29 @@ ul {
 .btn-category {
   background-image: none;
   width: 100%;
+}
+
+.fact-form input,
+.fact-form select {
+  background-color: #78716c;
+  border: none;
+  border-radius: 100px;
+  padding: 16px;
+  font-size: 18px;
+  font-family: inherit;
+  color: inherit;
+}
+
+.fact-form input::placeholder {
+  color: #a8a29e;
+}
+
+.fact-form input:first-child {
+  min-width: 330px;
+  flex-grow: 1;
+}
+
+.fact-form span {
+  font-weight: 600;
+  font-size: 18px;
 }
