--- a/style.css
+++ b/style.css
@@ -11,8 +11,8 @@ body {
   padding: 48px 64px;
 }
 
-.hidden {
-  display: none !important;
+form.hidden {
+  display: none;
 }
 
 /* MAIN LAYOUT */
